<h3>New in version 3.0.0</h3>
<ul>
    <li>Updates laws to include 2020 legislative session.</li>
    <li>New PWA version</li>
</ul>
<div id="update-action">
    <a class="btn btn-default update-dismiss">Dismiss</a> 
</div>