@@ -82,7 +82,7 @@
                     <hr />
                     <dl>
                         <dt>Version</dt>
-                        <dd>3.1.0</dd>
+                        <dd>3.2.0</dd>
                         <dt>Laws Last Updated</td>
                         <dd>November 2020</dd>
                         <dt>Source</dt>
